# copyspace-guard

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  landing.html  publish_copyspace_guard_to_github.sh  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  release.yml
client-package/: README_CLIENT.md  copyspace_guard.yml  roi.yml  run_local.sh  sample_demands.csv  sample_schedule.csv
doc/: ARTIFACT_CONTRACTS.md  AUDIT_MODE.md  BOUNDS.md  CI_INTEGRATION.md  CUSTOMER_SCHEDULE_FORMAT.md  DATA_HANDLING.md  MODEL_LIMITATIONS.md  OPERATIONS.md  PERFORMANCE.md  PRODUCTION_READINESS.md  RELEASE_PROCESS.md  ROADMAP.md  SCHEMAS.md  THREAT_MODEL.md
doc/partners/: CASE_STUDY_TEMPLATE.md  COMPETITIVE_LANDSCAPE.md  PAID_PILOT_OFFER.md  PILOT_INTAKE.md  PITCH_DECK.md  REPORT_TEMPLATE.md  landing.html
doc/partners/examples/: ai_checkpoint_bad_current_demands.csv  ai_checkpoint_bad_current_schedule.csv
docs/: BOUNDS.md  CI_GATE_GITHUB_ACTIONS.md  CUSTOMER_SCHEDULE_FORMAT.md  DEMO_SCRIPT.md  MODEL_LIMITATIONS.md  OUTBOUND_EMAILS.md  PAID_PILOT_OFFER.md  PERFORMANCE.md  PILOT_READINESS.md  PITCH_DECK.md  PRICING.md  RELEASE_CHECKLIST.md  RELEASE_PROCESS.md  REPORT_TEMPLATE.md  ROADMAP.md  ROI_AND_GATE_CONFIG.md  SALES_ONE_PAGER.md  SCHEMAS.md  SECURITY_PRIVACY.md  SOW_DATA_MOVEMENT_AUDIT.md  UPDATE_FROM_ZIP.md
examples/: ai_checkpoint.csv  current_schedule.csv  db_shuffle.csv  demo_conflict_demands.csv  github_actions_schedule_audit.yml  kv_cache_movement.csv  ring15_2.csv  sample_msccl.xml  sample_taccl.json  storage_replication.csv
examples/gpt2_ddp_allreduce/: README.md  demands.csv  naive_schedule.csv  roi.yml
examples/kv_cache_disagg/: README.md  demands.csv  naive_schedule.csv  roi.yml
examples/llama3_70b_checkpoint/: README.md  demands.csv  roi.yml
examples/megatron_tp_allreduce/: README.md  demands.csv  naive_schedule.csv  roi.yml
examples/regression/: conflict_schedule.csv
old/1/: README.md
old/1/docs/: CI_GATE_GITHUB_ACTIONS.md  PAID_PILOT_OFFER.md  PRICING.md  SALES_ONE_PAGER.md  SECURITY_PRIVACY.md
old/1/src/copyspace_guard/: cli.py  core.py  report.py
schemas/: instance_v0.schema.json  report_v0.schema.json  schedule_v0.schema.json  summary_v0.schema.json
src/copyspace_guard/: __init__.py  anonymize.py  bounds.py  bounds_reason.py  cli.py  core.py  importers.py  io.py  report.py  roi.py  schema.py  solvers.py  types.py  validate.py
tests/: test_bounds_edge.py  test_cli.py  test_core.py  test_coverage_expansion.py  test_importers.py  test_property.py
tests/golden/: ring15_summary_subset.json
tools/: release_artifacts.py  release_version.py  update_from_zip.sh
