[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "copyspace-guard"
version = "0.1.0"
description = "Deterministic data-movement audit, validation and optimization reports"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Copy-Space Guard"}]
dependencies = []

classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Benchmark",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
copyspace-guard = "copyspace_guard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

