[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "copyspace-guard"
version = "0.2.5"
description = "Audit GPU cluster communication schedules. Works from NCCL logs — no model weights needed. Zero dependencies. CI-ready."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "Dmitry Bortoq"}]
maintainers = [{name = "Dmitry Bortoq"}]
dependencies = []

keywords = ["nccl", "collective-communication", "distributed-training", "mlsys", "gpu-cluster", "schedule-optimization"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Benchmark",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: System :: Distributed Computing",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "bandit>=1.7",
  "coverage>=7",
  "hypothesis>=6.100",
  "jsonschema>=4.22",
  "mypy>=1.10",
  "pip-audit>=2.7",
  "ruff>=0.5",
  "setuptools>=77",
  "twine>=5.1",
  "wheel>=0.43",
]

[project.scripts]
copyspace-guard = "copyspace_guard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
copyspace_guard = ["py.typed"]

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]


[project.urls]
Homepage = "https://github.com/bortoq/copyspace-guard"
Repository = "https://github.com/bortoq/copyspace-guard"
Issues = "https://github.com/bortoq/copyspace-guard/issues"
